<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/EditDialogView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa" />

    <EditText
        android:id="@+id/EditDialogeditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/EditDialogtextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typ" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/EditDialogtextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <EditText
        android:id="@+id/EditDialogeditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/data_hint"
        android:inputType="date" >
    </EditText>


    <TextView
        android:id="@+id/EditDialogtextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wartosc" />

    <EditText
        android:id="@+id/EditDialogeditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/EditDialogbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edytuj" />

</LinearLayout>