<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/rowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rowView4"
        android:layout_marginTop="18dp"
        android:text="@string/nazwa" />

    <TextView
        android:id="@+id/rowView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="44dp"
        android:layout_marginTop="17dp"
        android:text="@string/typ" />

    <TextView
        android:id="@+id/rowView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rowView4"
        android:layout_alignBottom="@+id/rowView4"
        android:layout_alignParentLeft="true"
        android:text="@string/data" />

    <TextView
        android:id="@+id/rowView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rowView"
        android:layout_alignBottom="@+id/rowView"
        android:layout_alignLeft="@+id/rowView4"
        android:text="@string/wartosc" />

</RelativeLayout>
